deploy/k3s/base/haproxy-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-postgres
  namespace: methodology
spec:
  selector:
    app: haproxy-postgres
  ports:
    - name: write
      port: 5432
      targetPort: 5432
    - name: read
      port: 5433
      targetPort: 5433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-postgres
  namespace: methodology
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy-postgres
  template:
    metadata:
      labels:
        app: haproxy-postgres
    spec:
      containers:
        - name: haproxy
          image: haproxy:2.9-alpine
          volumeMounts:
            - name: haproxy-config
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
      volumes:
        - name: haproxy-config
          configMap:
            name: haproxy-config
