deploy/k3s/base/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: methodology
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: methodology
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:24.0
          args: ["start-dev"]
          volumeMounts:
            - name: secrets
              mountPath: /run/secrets
              readOnly: true
      volumes:
        - name: secrets
          secret:
            secretName: methodology-secrets
            items:
              - key: db_keycloak_user
                path: db_keycloak_user
              - key: db_keycloak_password
                path: db_keycloak_password
              - key: keycloak_admin_user
                path: keycloak_admin_user
              - key: keycloak_admin_password
                path: keycloak_admin_password
